# ExperiGenWorkspace

./: .gitignore  feature_descriptions.json  opencode.json  pyproject.toml
.opencode/: .gitignore
.opencode/agent/: feature-lookup.md
.opencode/tools/: feature_extractor.ts  feature_search.ts
