[project]
name = "experigen-workspace"
version = "0.1.0"
description = "Data analysis environment for the OpenCode analyst agent"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scikit-bio>=0.7.2",
    "biom-format>=2.1.17",
    "anndata>=0.11.4",
    "pycombat>=0.20",
]
